<resources>
    <string name="app_name">Desafio LealApps</string>

    <!-- Sign Up screen -->
    <string name="sign_up">Cadastro</string>
    <string name="sign_up_hint_email">*Email</string>
    <string name="sign_up_hint_name">*Nome Completo</string>
    <string name="sign_up_hint_age">*Idade</string>
    <string name="sign_up_hint_password">*Senha</string>
    <string name="sign_up_hint_password_confirmation">*Confirmação de senha</string>
    <string name="sign_up_hint_password_requirements_label">Sua senha precisa atender aos seguintes critérios:</string>
    <string name="sign_up_error_password_invalid">A senha não atende aos critérios necessários</string>
    <string name="sign_up_error_password_blank">A senha é obrigatória</string>
    <string name="sign_up_hint_password_requirement1">Mínimo uma letra minúscula</string>
    <string name="sign_up_hint_password_requirement2">Mínimo uma letra maiúscula</string>
    <string name="sign_up_hint_password_requirement3">Mínimo um número</string>
    <string name="sign_up_hint_password_requirement4">Mínimo de 8 caracteres</string>
    <string name="sign_up_button">Criar conta</string>

    <!-- Login screen -->
    <string name="log_in_button">Entrar</string>
    <string name="log_in_forgot_password">Esqueceu sua senha?</string>
    <string name="log_in_dont_have_account">Nâo tem conta?</string>
    <string name="log_in_sign_in_here">Registre-se aqui</string>
    <string name="log_in_or">ou</string>
    <string name="log_in_login_with_google">Continuar com o Google</string>

    <!-- Main screen -->
    <string name="main_title">Meus treinos</string>
    <string name="main_no_training">Você ainda não possui treinos, clique no botão adicionar no canto inferior direito para criar seu primeiro treino</string>

    <!-- My account screen -->
    <string name="my_account">Informações da conta</string>
    <string name="myName">Nome: </string>
    <string name="myAge">Idade: </string>
    <string name="logout">Sair</string>

    <!-- Edit Training screen -->
    <string name="edit_training_title">Editar treino</string>
    <string name="edit_training_name">*Nome do treino (Ex: treino A)</string>
    <string name="edit_training_time">*Tempo do treino (Ex: 50min) </string>
    <string name="edit_training_description">*Descrição do treino</string>
    <string name="start_training_button">Iniciar treino</string>
    <string name="create_exercise">Criar exercício</string>

    <!-- Create exercise screen -->
    <string name="create_exercise_title">Adicionar um exercício</string>
    <string name="create_exercise_name">*Nome do exercício</string>
    <string name="create_exercise_description">*Repetições (Ex: 4x15)</string>
    <string name="create_exercise_time">*Tempo de descanso (Ex: 30seg)</string>
    <string name="create_exercise_observations">Observações</string>
    <string name="create_exercise_text_galery">Adicione uma imagem</string>
    <string name="save_button">Salvar</string>
    <string name="save_exercise">Salvar exercício</string>

    <!-- start training screen -->
    <string name="my_training">Meu treino</string>
    <string name="no_exercise">Você ainda não possui exercícios, volte para a tela principal, clique em um treino e adicione exercícios</string>
    <string name="my_training_explanation">Para ver as observações do exercício clique e segure. Conforme for concluindo cada exercício, realize um clique normal.</string>
    <string name="finish">Exercício concluído</string>
    <string name="start">start</string>
    <string name="pause">pause</string>


    <string name="control_rest_time">Controle seu tempo de descanso:</string>
    <string name="reset">Reset</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="zero_timer">00:00</string>
    <string name="less">-</string>
    <string name="control_serie">Controle qual série você está:</string>


    <string name="training_days">Dia(s) deste Treino</string>
    <string name="dom">Dom</string>
    <string name="seg">Seg</string>
    <string name="ter">Ter</string>
    <string name="qua">Qua</string>
    <string name="qui">Qui</string>
    <string name="sex">Sex</string>
    <string name="sab">Sab</string>
    <string name="exercises_list">Lista de exercícios</string>
    <string name="exercises_explanation">Clique nos exercícios para editá-los</string>
    <string name="log_in">Log In</string>
    <string name="training_days_text">Dia(s) deste Treino</string>
    <string name="rep">Repetições:</string>
    <string name="rest">Descanso:</string>
    <string name="concluded">Concluído</string>


</resources>