<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignUpActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_scroll">

            <ProgressBar
                android:id="@+id/loadingProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/ic_back"
                android:layout_height="@dimen/ic_back"
                android:src="@drawable/ic_back"
                android:contentDescription="@null"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_marginStart="@dimen/horizontal_margin_2x"
                android:layout_marginTop="@dimen/vertical_margin_4x"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginStart="@dimen/horizontal_margin_2x"
                android:textColor="@color/laranja_claro"
                android:textSize="@dimen/text_size_title_default"
                app:layout_constraintBottom_toBottomOf="@+id/back"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="@+id/back" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_user_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_2x"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:gravity="center"
                android:hint="@string/sign_up_hint_name"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/edit_text_age"
                    android:singleLine="true"
                    android:textColorHint="@color/verde"
                    android:textSize="@dimen/text_input_default" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_user_age_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:layout_marginTop="@dimen/default_vertical_margin"
                android:gravity="center"
                android:hint="@string/sign_up_hint_age"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/edit_text_user_email"
                    android:singleLine="true"
                    android:textColorHint="@color/verde"
                    android:textSize="@dimen/text_input_default" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_user_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:layout_marginTop="@dimen/default_vertical_margin"
                android:gravity="center"
                android:hint="@string/sign_up_hint_email"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_user_age_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/edit_text_user_new_password"
                    android:singleLine="true"
                    android:textColorHint="@color/verde"
                    android:textSize="@dimen/text_input_default" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/user_password_requirements_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:text="@string/sign_up_hint_password_requirements_label"
                android:textSize="@dimen/text_input_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_email_layout" />

            <TextView
                android:id="@+id/user_password_requirement1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:text="@string/sign_up_hint_password_requirement1"
                android:textColor="@color/cinza"
                android:textSize="@dimen/text_input_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_password_requirements_label" />

            <TextView
                android:id="@+id/user_password_requirement2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:text="@string/sign_up_hint_password_requirement2"
                android:textColor="@color/cinza"
                android:textSize="@dimen/text_input_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_password_requirement1" />

            <TextView
                android:id="@+id/user_password_requirement3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:text="@string/sign_up_hint_password_requirement3"
                android:textColor="@color/cinza"
                android:textSize="@dimen/text_input_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_password_requirement2" />

            <TextView
                android:id="@+id/user_password_requirement4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:text="@string/sign_up_hint_password_requirement4"
                android:textColor="@color/cinza"
                android:textSize="@dimen/text_input_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_password_requirement3" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_user_new_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:gravity="center"
                android:hint="@string/sign_up_hint_password"
                android:layout_marginTop="@dimen/default_vertical_margin"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_password_requirement4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_user_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/edit_text_user_new_password_confirmation"
                    android:singleLine="true"
                    android:textColorHint="@color/verde"
                    android:textSize="@dimen/text_input_default" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_user_new_password_confirmation_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_2x"
                android:layout_marginTop="@dimen/default_vertical_margin"
                android:gravity="center"
                android:hint="@string/sign_up_hint_password_confirmation"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_new_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_user_new_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:nextFocusForward="@+id/edit_text_user_birthday"
                    android:singleLine="true"
                    android:textColorHint="@color/verde"
                    android:textSize="@dimen/text_input_default" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin_3x"
                android:backgroundTint="@color/laranja_claro"
                android:layout_marginTop="@dimen/vertical_margin_3x"
                android:padding="@dimen/vertical_margin_2x"
                android:text="@string/sign_up_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_default"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/edit_text_user_new_password_confirmation_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>